--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
-        <h1>Background Generator</h1>
+        <h1>Cool Generator</h1>
         <input class="color1" type="color">
         <input class="color2" type="color">
         <h2>Current CSS  background</h2>
