--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Super Background</title>
+        <title>Boom Background</title>
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
