--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Cool Generator</h1>
         <input class="color1" type="color">
         <input class="color2" type="color">
-        <h2>Current CSS  background</h2>
+        <h2>This is the baackground</h2>
         <script type="text/javascript" src="./script.js"></script>
     </body>
 </html>
