--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SupeR Background</title>
+        <title>Super Background</title>
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <body>
-        <h1>Background Generator</h1>
+        <h1>Back Generator</h1>
         <input class="color1" type="color">
         <input class="color2" type="color">
         <h2>Current CSS  background</h2>
