--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <input class="color1" type="color">
         <input class="color2" type="color">
         <h2>This is the baackground</h2>
+
+        <h3>oitik was here. </h3>
         <script type="text/javascript" src="./script.js"></script>
     </body>
 </html>
