--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h2>This is the baackground</h2>
 
         <h3>oitik was here. </h3>
+
+        <h1>Omi was here</h1>
         <script type="text/javascript" src="./script.js"></script>
     </body>
 </html>
